[project]
name = "kaggle-2026-nlp-solution"
version = "0.1.0"
description = "Competition notebook solution for 2026 NLP multilabel task."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "tqdm>=4.66.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "iterative-stratification>=0.1.9",
  "ipykernel>=6.29.5",
]

[tool.uv]
package = false
